atualizada listas para plimorfismo