@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import projeto.enums.Genero;
 import projeto.enums.Idioma;
@@ -15,15 +14,15 @@ import projeto.enums.Idioma;
 public class Cliente {
 	private String nome;
 	private String senha;
-	private List<Serie> listaParaVer;
-	private List<Serie> listaJaVista;
+	private List<Midia> listaParaVer;
+	private List<Midia> listaJaVista;
     private Map<Midia, Avaliacao> avaliacoes;
 
 	public Cliente(String nome, String senha) {
 		this.nome = nome;
 		this.senha = senha;
-		listaParaVer = new ArrayList<Serie>();
-		listaJaVista = new ArrayList<Serie>();
+		listaParaVer = new ArrayList<Midia>();
+		listaJaVista = new ArrayList<Midia>();
 		avaliacoes = new HashMap<Midia, Avaliacao>();
 	}
 	
@@ -32,7 +31,7 @@ public class Cliente {
 	 * Adiciona série a lista
 	 * @param serie
 	 */
-	public void adicionarNaLista(Serie serie) {
+	public void adicionarNaLista(Midia serie) {
 		listaParaVer.add(serie);
 	}
 
@@ -40,7 +39,7 @@ public class Cliente {
 	 * Retira série da lista
 	 * @param serie
 	 */
-	public void retirarDaLista(Serie serie) {
+	public void retirarDaLista(Midia serie) {
 		listaParaVer.remove(serie);
 	}
 
@@ -49,9 +48,10 @@ public class Cliente {
 	 * @param genero
 	 * @return
 	 */
-	public List<Serie> filtrarPorGenero(Genero genero) {
+	public List<Midia> filtrarPorGenero(Genero genero) {
 		return listaParaVer.stream()
-			.filter(serie -> serie.getGenero().equals(genero)).collect(Collectors.toList());
+			.filter(serie -> serie.getGenero().equals(genero))
+			.toList();
 	}
 
 	/**
@@ -59,9 +59,10 @@ public class Cliente {
 	 * @param idioma
 	 * @return
 	 */
-	public List<Serie> filtrarPorIdioma(Idioma idioma) {
+	public List<Midia> filtrarPorIdioma(Idioma idioma) {
 		return listaParaVer.stream()
-			.filter(serie -> serie.getIdioma().equals(idioma)).collect(Collectors.toList());
+			.filter(serie -> serie.getIdioma().equals(idioma))
+			.toList();
 	}
 	/**
 	 * Retorna uma lista das séries que tenham aquela quantidade de episodios
@@ -70,13 +71,16 @@ public class Cliente {
 	 */
 	public List<Serie> filtrarPorQtdEpisodios(int nEpisodios) {
 		return listaParaVer.stream()
-			.filter(serie -> serie.getQuantidadeDeEpisodios() == nEpisodios).collect(Collectors.toList());
+			.filter(Serie.class::isInstance)
+			.map(Serie.class::cast)
+			.filter(serie -> serie.getQuantidadeDeEpisodios() == nEpisodios)
+			.toList();
 	}
 	/**
 	 * registra uma audiência na série
 	 * @param serie
 	 */
-	public void registrarAudiencia(Serie serie) {
+	public void registrarAudiencia(Midia serie) {
 		serie.registrarAudiencia();
 	}
 	/**
@@ -84,13 +88,13 @@ public class Cliente {
 	 * @param serie
 	 * @param nota
 	 */
-	public void avalia(Serie serie, int nota, String comentario) {
+	public void avalia(Midia serie, int nota, String comentario) {
 		Avaliacao avaliacao = new Avaliacao(nota, comentario);
 		avaliacoes.put(serie, avaliacao);
 		serie.avalia(this, avaliacao);
 	}
 	
-	public void avalia(Serie serie, int nota) {
+	public void avalia(Midia serie, int nota) {
 		Avaliacao avaliacao = new Avaliacao(nota);
 		avaliacoes.put(serie, avaliacao);
 		serie.avalia(this, avaliacao);
@@ -100,19 +104,19 @@ public class Cliente {
 		return nome;
 	}
 
-	public List<Serie> getListaParaVer() {
+	public List<Midia> getListaParaVer() {
 		return listaParaVer;
 	}
 
-	public void setListaParaVer(List<Serie> listaParaVer) {
+	public void setListaParaVer(List<Midia> listaParaVer) {
 		this.listaParaVer = listaParaVer;
 	}
 
-	public List<Serie> getListaJaVista() {
+	public List<Midia> getListaJaVista() {
 		return listaJaVista;
 	}
 
-	public void setListaJaVista(List<Serie> listaJaVista) {
+	public void setListaJaVista(List<Midia> listaJaVista) {
 		this.listaJaVista = listaJaVista;
 	}
 
